<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:visibility="visible"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/containView"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/fullname"
                android:layout_width="150dp"
                style="@style/viewContentQuestion"/>
            <TextView
                android:id="@+id/name"
                android:text="@string/txtFullName"
                style="@style/viewRadioButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/e_mail"
                android:layout_width="150dp"
                style="@style/viewContentQuestion"/>
            <TextView
                android:id="@+id/email"
                android:text="@string/txtEmail"
                style="@style/viewRadioButton"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/mobile"
                android:layout_width="150dp"
                style="@style/viewContentQuestion"/>
            <TextView
                android:id="@+id/mobile"
                android:text="@string/txtMobile"
                style="@style/viewRadioButton"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnUpdate"
            style="@style/viewButton"
            android:text="@string/update"/>
    </LinearLayout>

</LinearLayout>